# magic_json_serialize_enum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/FredEmmott/: magic_json_serialize_enum.hpp
tests/: CMakeLists.txt  basics.cpp  overrides.cpp
